MOVE-2506: Add support for Iso6523